# myUtilities

./: CMakeLists.txt  myUtilitiesConfig.cmake.in
src/myUtilities/: CMakeLists.txt
src/myUtilities/include/: data_reading.hpp  interval.hpp  linspace.hpp  myUtilities.hpp  wrap.hpp  zero_crossing.hpp
src/myUtilities/src/: data_reading.cpp  interval.cpp  linspace.cpp  myUtilities.cpp  wrap.cpp
src/tests/: CMakeLists.txt  myUtilitiesTest.cpp
